// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tile 1`] = `
<div
  className="mb-12"
>
  <div
    className="flex gap-1"
  >
    <h4
      className="relative text-zinc-950 font-semibold mb-4 text-lg"
    >
      Test Title
    </h4>
  </div>
  Tile
</div>
`;

exports[`Tile with badge 1`] = `
<div
  className="mb-12"
>
  <div
    className="flex gap-1"
  >
    <h4
      className="relative text-zinc-950 font-semibold mb-4 text-lg"
    >
      Test Title
    </h4>
    <span />
  </div>
  Tile with badge
</div>
`;

exports[`Tile without title 1`] = `
<div
  className="mb-12"
>
  <div
    className="flex gap-1"
  />
  Tile without title
</div>
`;
